deploy: 30e83be124231db5768f8667534c3e3c8eaa67f5

--- a/geometry/point-to-line-distance.html
+++ b/geometry/point-to-line-distance.html
@@ -372,7 +372,7 @@ d= \lVert \overrightarrow{QP} \rVert cos\theta
 \[
 d= \frac{\lVert \overrightarrow{QP} \rVert \lVert \overrightarrow{n} \rVert cos\theta }{\lVert \overrightarrow{n} \rVert}
 \]</div>
-<p>we know from the definition of dot product that <span class="math notranslate nohighlight">\(\lVert \overrightarrow{QP} \rVert \lVert \overrightarrow{n} \rVert cos\theta \)</span> ust means the dot product of the vector <span class="math notranslate nohighlight">\(\overrightarrow{QP}\)</span> and the normal vector  <span class="math notranslate nohighlight">\(\overrightarrow{n}\)</span>:</p>
+<p>we know from the definition of dot product that <span class="math notranslate nohighlight">\(\lVert \overrightarrow{QP} \rVert \lVert \overrightarrow{n} \rVert cos\theta \)</span> just means the dot product of the vector <span class="math notranslate nohighlight">\(\overrightarrow{QP}\)</span> and the normal vector  <span class="math notranslate nohighlight">\(\overrightarrow{n}\)</span>:</p>
 <div class="math notranslate nohighlight">
 \[
 d= \frac{ \overrightarrow{QP} \cdot \overrightarrow{n}  }{\lVert \overrightarrow{n} \rVert}
